tests/baselines/reference/checkJsdocTypedefOnlySourceFile(strict=true).errors.txt
0.js(8,9): error TS2339: Property 'SomeName' does not exist on type '{}'.
0.js(10,20): error TS2694: Namespace 'exports' has no exported member 'SomeName'.


==== 0.js (2 errors) ====
    // @ts-check
    
    var exports = {};
    
    /**
     * @typedef {string}
     */
    exports.SomeName;
            ~~~~~~~~
!!! error TS2339: Property 'SomeName' does not exist on type '{}'.
    
    /** @type {exports.SomeName} */
                       ~~~~~~~~
!!! error TS2694: Namespace 'exports' has no exported member 'SomeName'.
    const myString = 'str';
    